[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/insidecruise.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Retro Gaming.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Player/IntroPlayer.gd" type="Script" id=4]
[ext_resource path="res://Assets/chars/maria2.png" type="Texture" id=5]
[ext_resource path="res://Assets/chars/maria1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/contextMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Scripts/insideCruise.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 0.5
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 43.6364
height = 74.5455

[sub_resource type="DynamicFont" id=1]
size = 10
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -5
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 540, 97 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.137255, 0.129412, 0.129412, 0.827451 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.137255, 0.129412, 0.129412, 1 )

[node name="insideCruise" type="Node2D"]
script = ExtResource( 8 )

[node name="blackbg" type="ColorRect" parent="."]
margin_left = -194.0
margin_top = -335.0
margin_right = -154.0
margin_bottom = -295.0
rect_scale = Vector2( 39.9387, 106.806 )
color = Color( 0, 0, 0, 1 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.4, 0.389 )
texture = ExtResource( 1 )

[node name="maria" type="AnimatedSprite" parent="."]
position = Vector2( 761, 170 )
scale = Vector2( 0.55, 0.55 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="mariacoll" type="StaticBody2D" parent="maria"]

[node name="mariacollision" type="CollisionShape2D" parent="maria/mariacoll"]
position = Vector2( -10.9092, -72.7273 )
shape = SubResource( 4 )

[node name="mariatext" type="RichTextLabel" parent="maria/mariacoll"]
margin_left = -44.0
margin_top = -44.0
margin_right = 23.0
margin_bottom = 85.0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 957, 199 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="Player"]
scale = Vector2( 1.37089, 1.3239 )
current = true
zoom = Vector2( 0.6, 0.6 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="Thoughts" type="Label" parent="Player"]
visible = false
margin_left = -92.0
margin_top = -41.3333
margin_right = 142.0
margin_bottom = -12.3333
rect_scale = Vector2( 0.780456, 0.925607 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="wallcollision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="wallcollision"]
position = Vector2( 498, 54 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="wallcollision"]
position = Vector2( 512, 392 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="wallcollision"]
position = Vector2( -540, 213 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="wallcollision"]
position = Vector2( 1539, 213 )
shape = SubResource( 2 )

[node name="contextMenu" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = 677.0
margin_top = 200.0
margin_right = 717.0
margin_bottom = 240.0

[node name="viewButton" type="Button" parent="contextMenu"]
margin_top = 1.0
margin_right = 86.0
margin_bottom = 28.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "View"

[node name="talkButton" type="Button" parent="contextMenu"]
margin_top = 15.9931
margin_right = 86.0
margin_bottom = 42.9931
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Talk"

[node name="closebutton" type="Button" parent="contextMenu"]
margin_top = 31.0
margin_right = 86.0
margin_bottom = 54.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Close"

[connection signal="mouse_entered" from="maria/mariacoll/mariatext" to="." method="_on_mariatext_mouse_entered"]
[connection signal="mouse_exited" from="maria/mariacoll/mariatext" to="." method="_on_mariatext_mouse_exited"]
[connection signal="pressed" from="contextMenu/viewButton" to="." method="_on_viewButton_pressed"]
[connection signal="pressed" from="contextMenu/talkButton" to="." method="_on_talkButton_pressed"]
[connection signal="pressed" from="contextMenu/closebutton" to="." method="_on_closebutton_pressed"]
